compiler/tests/en/errors/unused_import.salam
// EXPECT: E082
import math

func main:
    println "hi"
end
